Project more progress and added Angular 5

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about">
+<div class="page about">
     <div class="about-me">
         <h1 class="about-me__title">
         About me.
@@ -28,11 +28,11 @@
     <div class="image">
         <div class="image__item"><img src="http://via.placeholder.com/450x600"></div>
     </div>
-</div>
-<div class="skew">
-    <div class="skew__scrolldown">
-        <p class="skew__scrolldown-paragraph">
-            View the projects i've worked on
-        </p>
+    <div class="skew">
+        <div class="skew__scrolldown">
+            <p class="skew__scrolldown-paragraph">
+                View the projects i've worked on
+            </p>
+        </div>
     </div>
 </div>
