--- a/src/app/blog-overview/blog-overview.component.html
+++ b/src/app/blog-overview/blog-overview.component.html
@@ -1,4 +1,4 @@
-<div class="blog-overview">
+<div class="page blog-overview">
   
   <div class="blog-overview__header">
     <h1 class="blog-overview__header-title">
