--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
-<section class="welcome">
+<div class="page welcome">
   <h1 class="welcome__title">
     Hi There,
   </h1>
   <p class="welcome__paragraph">
     “Nice to meet you, I’m Jeroen a Full-Stack Developer”
   </p>
-  <!-- <div class="skew">
-    <p class="skew-meetme">
+  <div class="welcome__skew">
+    <p class="welcome__skew-meetme">
         Meet me!
     </p>
-    <p class="skew-scrolldown">
+    <p class="welcome__skew-scrolldown">
         Scroll down 
     </p>
     <div class="welcome__skew-arrow"></div>
-  </div> -->
-</section>
+  </div>
+</div>
