--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
+    overflow: hidden;
+}
+
+.page {
+    padding: 50px;
+    margin: 72px;
 }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
