--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -6,7 +6,6 @@
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 50px;
     background: $darkgrey;
     color: $white;
     position: relative;
@@ -41,36 +40,38 @@
                 margin: 15px 20px;
                 width: 50px;
             
+            }
         }
     }
-    }
-
 }
 
 .image {   
     justify-content: flex-end;     
     width: 450px;
     margin: -50px -50px 0 0;
-    z-index: 20;
+    z-index: 0;
 
     &__item {
 
     }
-
 }
+
 .skew {
     @include skew (5deg);
-    bottom: 0px;
     width: 100%;
-    height: 200px;
+    height: 215px;
+    left: 0px;
+    bottom: -100px;
+    position: absolute;
     background: $orange;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
 
     &__scrolldown {   
         @include skew (-5deg); 
 
         &-paragraph {
-            justify-content: center;
+            margin: 45px 0 0 0;
         }
     }
 }
