--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
 .wrapper {
     display: flex;
     height: 100vh;
-    overflow-y: hidden;
+    // overflow-y: hidden;
     
     app-menu {
         align-items: center;
@@ -13,6 +13,7 @@
         height: 100%;
         background-color: $white;
         z-index: 60;
+        position: fixed; 
     }
 
     .container {
@@ -31,6 +32,8 @@
         background-color: $white;
         z-index: 60;
         align-items: center;
+        position: fixed; 
     }
 
 }
+
