--- a/src/app/blog-overview/blog-overview.component.scss
+++ b/src/app/blog-overview/blog-overview.component.scss
@@ -2,8 +2,11 @@
 @import "./src/assets/scss/base/mixins";
 
 .blog-overview {
-    @include page-styling (0, $darkgrey);
-    height: 100vh;
+    height: 100%;
+    background: $darkgrey;
+    color: $white;
+    padding: 0;
+    overflow-y: scroll;
 
     &__header {
         @include skew (-5deg);
@@ -20,7 +23,7 @@
             font-size: 66px;
             font-weight: 700;
             text-transform: uppercase;
-            margin: 30px 0 0 -100px;
+            margin: 30px 0 0 -140px;
         }
 
         &-searchbar {
@@ -39,7 +42,7 @@
 
     &__list {
         height: 100%;
-        margin-top: 30px;
+        margin: 30px 0;
         overflow-x: hidden;
         display: flex;
         flex-direction: row;
