--- a/src/app/blog-overview/blog/blog.component.scss
+++ b/src/app/blog-overview/blog/blog.component.scss
@@ -2,38 +2,42 @@
 @import "./src/assets/scss/base/mixins";
 
 .blog {
-    @include page-styling (0, $white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    color: $white;
     position: relative;
-
+    padding: 72px 0;
+    
     &__header {
         @include skew (-5deg);
-        margin: -80px 0 0 0;
+        margin: -140px 0 0 0;
         background: $purple;
         display: flex;
         flex-direction: row;
         align-items: center;
         height: 350px;
-
+        
         &-container {
-            margin: 50px 0 0 30px;
+            margin: 30px 0 0 120px;
         }
-
+        
         &-date {
             @include skew (5deg);
             font-size: 16px;
             font-style: italic;
             font-weight: 400;
         }
-
+        
         &-title {
             @include skew (5deg);
             font-size: 46px;
             font-weight: 700;
             margin: 0;
         }
-
     }
-
+    
     &__container {
         width: 100%;
         height: 100%;
@@ -42,17 +46,16 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
+        
         &-paragraph {
             color: $darkgrey;
             width: 70%;
-
+            
             &--first {
                 margin-top: 40px;
             }
-
         }
-
+        
         &-header {
             font-size: 24px;
             font-weight: 700;
@@ -66,7 +69,5 @@
             max-width: 70%;
             margin: 25px 0;
         }
-
     }
-
 }
