--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,9 +5,9 @@
     padding: 50px;
     background: $orange;
     color: $white;
-    height: 560px;
+    height: 100vh;
     position: relative;
-    //// hackkieee change this
+    overflow: hidden;
     
     &__title {
         font-size: 150px;
@@ -15,7 +15,7 @@
         font-style: italic;
         margin: 30px 0;
     }
-
+    
     &__paragraph {
         font-size: 34px;
         font-weight: 500;
@@ -23,41 +23,39 @@
         width: 500px;
         margin: 10px 0;
     }
-
-}
-
-.skew {
-    @include skew (-20deg);
-    display: flex;
-    flex-direction: column;
-    text-align: center;         
-    background: $darkgrey;
-    height: 350px;
-    width: 50%;
-    position: absolute;
-    right: 20px;
-    z-index: 19;
-    bottom: -150px;
-
-    &-meetme {
-        @include skew (20deg);
-        font-size: 26px;
-        font-weight: 900;
-        margin: 30px 0 0 0;
+    
+    
+    &__skew {
+        @include skew (-20deg);
+        display: flex;
+        flex-direction: column;
+        text-align: center;         
+        background: $darkgrey;
+        height: 55%;
+        position: relative;
+        right: -50px;
+        z-index: 19;
+        bottom: -185px;
+        
+        &-meetme {
+            @include skew (20deg);
+            font-size: 26px;
+            font-weight: 900;
+            margin: 30px 0 0 0;
+        }
+        
+        &-scrolldown {
+            @include skew (20deg);
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: 400;
+            margin: 0px;
+        }
+        
+        &-arrow {
+            @include scroll-button (-25deg);
+            position: absolute;
+            top: -100px;
+        }
     }
-
-    &-scrolldown {
-        @include skew (20deg);
-        text-transform: uppercase;
-        font-size: 14px;
-        font-weight: 400;
-        margin: 0px;
-    }
-
-    &-arrow {
-        @include scroll-button (-25deg);
-        position: absolute;
-        top: -100px;
-    }
-
 }
