--- a/src/app/shared/layouts/header/header.component.scss
+++ b/src/app/shared/layouts/header/header.component.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     background: $white;
     z-index: 20;
-    position: relative;
+    position: fixed;
 
     &__title {
         background: $white;
