--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -59,10 +59,9 @@
 .skew {
     @include skew (5deg);
     width: 100%;
-    height: 215px;
+    height: 200px;
     left: 0px;
-    bottom: -100px;
-    position: absolute;
+    position: relative;
     background: $orange;
     display: flex;
     justify-content: center;
