--- a/src/app/blog-overview/blog-overview.component.scss
+++ b/src/app/blog-overview/blog-overview.component.scss
@@ -6,11 +6,11 @@
     background: $darkgrey;
     color: $white;
     padding: 0;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 
     &__header {
         @include skew (-5deg);
-        margin: -100px 0 0 0;
+        margin: -150px 0 0 0;
         background: $purple;
         display: flex;
         flex-direction: row;
@@ -23,14 +23,14 @@
             font-size: 66px;
             font-weight: 700;
             text-transform: uppercase;
-            margin: 30px 0 0 -140px;
+            margin: 70px 0 0 -140px;
         }
 
         &-searchbar {
             @include skew (5deg);
             height: 35px;
             width: 284px;
-            margin: 130px 15px 0 0;
+            margin: 200px 15px 0 0;
             padding: 5px 15px;
             border: none;
             background: $white;
@@ -42,11 +42,11 @@
 
     &__list {
         height: 100%;
-        margin: 30px 0;
-        overflow-x: hidden;
+        margin: 50px 0;
+        overflow: hidden;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        justify-content: space-between;
         flex-wrap: wrap;
 
         &-item {
@@ -61,7 +61,7 @@
             }
 
             &:hover &-date {
-                color: $purple;
+                color: $purple; 
             }
             
             &:hover &-title {
