assisted on issue with skew

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,16 +1,16 @@
-<div class="page about">
+<div class="about">
     <div class="about-me">
         <h1 class="about-me__title">
         About me.
         </h1>
         <p class="about-me__paragraph">
-            It won’t be a bigger problem to ﬁnd one video game lover in your neighbor. 
-            Since the introduction of Virtual Game, 
-            it has been achieving great heights so far as its popularity and technological advancement are concerned. 
+            It won’t be a bigger problem to ﬁnd one video game lover in your neighbor.
+            Since the introduction of Virtual Game,
+            it has been achieving great heights so far as its popularity and technological advancement are concerned.
             The history of video game is as interesting as a fairy tale.
-            The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever. 
-            During the formulative years, video games were created by using various interactive electronic devices with various 
-            display formats. 
+            The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever.
+            During the formulative years, video games were created by using various interactive electronic devices with various
+            display formats.
             The ﬁrst ever video game was
         </p>
         <div class="about-me__languages">
