--- a/src/app/blog-overview/blog-overview.component.html
+++ b/src/app/blog-overview/blog-overview.component.html
@@ -1,59 +1,59 @@
-<div class="page blog-overview">
-  
+<div class="blog-overview">
+
   <div class="blog-overview__header">
     <h1 class="blog-overview__header-title">
       Blogs.
     </h1>
     <input class="blog-overview__header-searchbar" placeholder="Search...">
   </div>
-  
+
   <div class="blog-overview__list">
-    
+
     <div routerLink="/blog" class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
       <div class="blog-overview__list-item-title">
-        Are You Ready To Buy A Home Theater Audio System 
+        Are You Ready To Buy A Home Theater Audio System
       </div>
     </div>
-    
+
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
       <div class="blog-overview__list-item-title">
-        How To Put Movies On Iphone 
+        How To Put Movies On Iphone
       </div>
     </div>
-    
+
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
       <div class="blog-overview__list-item-title">
-        Computer Hardware Desktops And Notebooks  
+        Computer Hardware Desktops And Notebooks
       </div>
     </div>
-    
+
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
       <div class="blog-overview__list-item-title">
-        Are You Ready To Buy A Home Theater Audio System 
+        Are You Ready To Buy A Home Theater Audio System
       </div>
     </div>
-    
+
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
       <div class="blog-overview__list-item-title">
-        How To Put Movies On Iphone 
+        How To Put Movies On Iphone
       </div>
     </div>
-    
+
   </div>
-  
+
 </div>
