--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="page welcome">
+<div class="welcome">
   <h1 class="welcome__title">
     Hi There,
   </h1>
@@ -9,9 +9,9 @@
     <p class="welcome__skew-meetme">
         Meet me!
     </p>
-    <p class="welcome__skew-scrolldown">
-        Scroll down 
-    </p>
-    <div class="welcome__skew-arrow"></div>
+    <!--<p class="welcome__skew-scrolldown">-->
+        <!--Scroll down-->
+    <!--</p>-->
+    <!--<div class="welcome__skew-arrow"></div>-->
   </div>
 </div>
