--- a/src/app/project-overview/project/project.component.html
+++ b/src/app/project-overview/project/project.component.html
@@ -1,29 +1,29 @@
-<div class="page project">
+<div class="project">
   <div class="content-left">
     <div class="info">
       <h1 class="info__title">
-        Project title bla bla        
+        Project title bla bla
       </h1>
       <h5 class="info__client">Client</h5>
       <p class="info__client-name">Name of Client</p>
-      
+
       <h5 class="info__date">Date</h5>
       <p class="info__date-time">mm / dd / yyyy</p>
-      
+
       <p class="info__paragraph">
-        It won’t be a bigger problem to ﬁnd one video game lover in your neighbor. 
-        Since the introduction of Virtual Game, 
-        it has been achieving great heights so far as its popularity and technological advancement are concerned. 
+        It won’t be a bigger problem to ﬁnd one video game lover in your neighbor.
+        Since the introduction of Virtual Game,
+        it has been achieving great heights so far as its popularity and technological advancement are concerned.
         The history of video game is as interesting as a fairy tale.
-        The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever. 
+        The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever.
       </p>
-      
+
       <div class="info__link">
         <a href="https://www.github.com" target="_blank" class="fa fa-link" aria-hidden="true"></a>
       </div>
-      
+
     </div>
-    
+
     <div class="skill">
       <div class="skill__container">
         <h5 class="skill__container-title">Skills used</h5>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="images">
     <!-- <div class="images__item images__item-wide"><img src="http://via.placeholder.com/600x300"></div>
     <div class="images__item images__item-small"><img src="http://via.placeholder.com/300x300"></div>
@@ -42,9 +42,9 @@
     <div class="images__item images__item--small"></div>
     <div class="images__item images__item--small"></div>
   </div>
-  
-  <div class="sidemenu">  
-    
+
+  <div class="sidemenu">
+
     <mat-sidenav-container class="sidemenu__container">
 
       <mat-sidenav align="end" mode="over" #sidenav class="sidemenu__sidenav-inside">
@@ -69,13 +69,13 @@
           <h4 class="sidemenu__btn-title">Title of project</h4>
         </a>
       </mat-sidenav>
-      
+
       <div class="sidemenu__sidenav-outside">
         <a (click)="sidenav.open()">
           <h3 class="sidemenu__btn-number">01</h3>
         </a>
         <a (click)="sidenav.open()">
-          <h3 class="sidemenu__btn-number">02</h3> 
+          <h3 class="sidemenu__btn-number">02</h3>
         </a>
         <a (click)="sidenav.open()">
           <h3 class="sidemenu__btn-number">03</h3>
@@ -87,9 +87,9 @@
           <h3 class="sidemenu__btn-number">05</h3>
         </a>
       </div>
-      
+
     </mat-sidenav-container>
-      
+
   </div>
-  
+
 </div>
