--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<section class="wrapper">
-    <app-menu></app-menu>
+<div class="wrapper">
+  <app-menu></app-menu>
 
-        <div class="container">
-            <app-header></app-header>
-            <router-outlet></router-outlet>
-            <app-footer></app-footer>
-        </div>
+    <div class="container">
+      <app-header></app-header>
+        <router-outlet></router-outlet>
+      <app-footer></app-footer>
+    </div>
 
-    <app-sidebar></app-sidebar>
-</section>
+  <app-sidebar></app-sidebar>
+</div>
+
 
