Skew problem about page fix + menu fix

--- a/src/app/shared/layouts/menu/menu.component.scss
+++ b/src/app/shared/layouts/menu/menu.component.scss
@@ -150,6 +150,7 @@
             &--orange {
                 height: 38px;
                 width: 200px;
+                left: 30px;
 
                 &:hover {
                     background-color: $orange;
@@ -159,6 +160,7 @@
             &--green {
                 height: 38px;
                 width: 195px;
+                left: 30px;
 
                 &:hover {
                     background-color: $lightgreen;
@@ -168,6 +170,7 @@
             &--purple {
                 height: 38px;
                 width: 134px;
+                left: 30px;
 
                 &:hover {
                     background-color: $purple;
