--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -6,15 +6,17 @@
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 50px 0;
     background: $darkgrey;
     color: $white;
     position: relative;
-    height: 750px;
+    height: calc(100vh - 243px);
 
     .about-me {
         width: 60%;
         z-index: 20;
         height: 100%;
+        padding: 0 50px;
 
         &__title {
             font-size: 66px;
@@ -49,7 +51,7 @@
 .image {
     justify-content: flex-end;
     width: 450px;
-    margin: -50px -50px 0 0;
+    margin: -50px 0 0 0;
     z-index: 0;
 
     &__item {
@@ -58,14 +60,21 @@
 }
 
 .skew {
-    @include skew (5deg);
-    width: 100%;
-    height: 200px;
-    left: 0px;
-    position: relative;
-    background: $orange;
+    // @include skew (5deg);
+    clip-path: polygon(
+        0 50%, /* left top */
+        0 100%, /* right top */
+        100% 100%, /* right bottom */
+        100% 90% /* left bottom */
+    );
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 55%;
+    bottom: 253px;
+    position: relative;
+    background: $orange;
+    z-index: 19;
 
     &__scrolldown {
         @include skew (-5deg);
