--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,5 +1,6 @@
 @import "./src/assets/scss/base/variables";
 @import "./src/assets/scss/base/mixins";
+@import "./src/assets/scss/responsive/desktop-big";
 
 .about {
     display: flex;
@@ -60,18 +61,17 @@
 }
 
 .skew {
-    // @include skew (5deg);
     clip-path: polygon(
-        0 50%, /* left top */
-        0 100%, /* right top */
-        100% 100%, /* right bottom */
-        100% 90% /* left bottom */
+        0 50%,
+        0 100%,
+        100% 100%,
+        100% 90%
     );
     display: flex;
     justify-content: center;
     width: 100%;
     height: 55%;
-    bottom: 253px;
+    bottom: 286px;
     position: relative;
     background: $orange;
     z-index: 19;
