--- a/src/app/blog-overview/blog/blog.component.scss
+++ b/src/app/blog-overview/blog/blog.component.scss
@@ -8,30 +8,31 @@
     height: 100%;
     color: $white;
     position: relative;
-    padding: 72px 0;
-     
+    
     &__header {
-        @include skew (-5deg);
-        margin: -140px 0 0 0;
+        clip-path: polygon(
+        0 0,
+        100% 0,
+        100% 75%,
+        0 100%
+        );
         background: $purple;
         display: flex;
         flex-direction: row;
         align-items: center;
-        height: 350px;
+        height: 250px;
         
         &-container {
-            margin: 30px 0 0 120px;
+            margin: 0 0 0 120px;
         }
         
         &-date {
-            @include skew (5deg);
             font-size: 16px;
             font-style: italic;
             font-weight: 400;
         }
         
         &-title {
-            @include skew (5deg);
             font-size: 46px;
             font-weight: 700;
             margin: 0;
