--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,33 @@
-<div class="wrapper">
-  <app-menu></app-menu>
-
+<mat-sidenav-container>
+  <div class="wrapper">
+    <mat-sidenav #sidenav mode="push">
+      <a routerLink="/about-me" class="btn-item btn-item--orange" (click)="sidenav.toggle()">
+        About me
+      </a>
+      <a routerLink="/project" class="btn-item btn-item--green" (click)="sidenav.toggle()">
+        Projects
+      </a>
+      <a routerLink="/blogs" class="btn-item btn-item--purple" (click)="sidenav.toggle()">
+        Blogs
+      </a>
+    </mat-sidenav>
+    
+    <div class="example-sidenav-content">
+      <!-- <button type="button" mat-button (click)="sidenav.toggle()">
+        Open sidenav
+      </button> -->
+      <app-menu (click)="sidenav.toggle()"></app-menu>
+    </div>
+    
+    
     <div class="container">
       <app-header></app-header>
-        <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
       <app-footer></app-footer>
     </div>
-
-  <app-sidebar></app-sidebar>
-</div>
-
+    
+    <app-sidebar></app-sidebar>
+  </div>
+  
+</mat-sidenav-container>
 
