--- a/src/app/blog-overview/blog-overview.component.html
+++ b/src/app/blog-overview/blog-overview.component.html
@@ -1,24 +1,24 @@
 <div class="blog-overview">
-
+  
   <div class="blog-overview__header">
     <h1 class="blog-overview__header-title">
       Blogs.
     </h1>
     <input class="blog-overview__header-searchbar" placeholder="Search...">
   </div>
-
+  
   <div class="blog-overview__list">
-
+    
     <div routerLink="/blog" class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
       <div class="blog-overview__list-item-title">
-        Are You Ready To Buy A Home Theater Audio System
+        My first blog
       </div>
     </div>
-
-    <div class="blog-overview__list-item">
+    
+    <!-- <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
@@ -26,7 +26,7 @@
         How To Put Movies On Iphone
       </div>
     </div>
-
+    
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
@@ -35,7 +35,7 @@
         Computer Hardware Desktops And Notebooks
       </div>
     </div>
-
+    
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
@@ -44,7 +44,7 @@
         Are You Ready To Buy A Home Theater Audio System
       </div>
     </div>
-
+    
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
@@ -52,8 +52,8 @@
       <div class="blog-overview__list-item-title">
         How To Put Movies On Iphone
       </div>
-    </div>
-
+    </div> -->
+    
   </div>
-
+  
 </div>
