--- a/src/app/project-overview/ftsf-webshop/ftsf-webshop.component.html
+++ b/src/app/project-overview/ftsf-webshop/ftsf-webshop.component.html
@@ -2,7 +2,7 @@
   <div class="content-left">
     <div class="info">
       <h1 class="info__title">
-        Project title bla bla
+        FTSF Webshop
       </h1>
       <h5 class="info__client">Client</h5>
       <p class="info__client-name">Name of Client</p>
