--- a/src/app/shared/layouts/menu/menu.component.html
+++ b/src/app/shared/layouts/menu/menu.component.html
@@ -7,7 +7,7 @@
     <span class="menu__lines menu__line-3"></span>
   </label>
 
-  <a routerLink="/about-me" class="menu__btn-item menu__open-btn--orange">
+  <!-- <a routerLink="/about-me" class="menu__btn-item menu__open-btn--orange">
     About me
   </a>
   <a routerLink="/project" class="menu__btn-item menu__open-btn--green">
@@ -15,6 +15,6 @@
   </a>
   <a routerLink="/blogs" class="menu__btn-item menu__open-btn--purple">
     Blogs
-  </a>
+  </a> -->
 </nav>
   
