--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
+    overflow-x: none;
 }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
