--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -26,7 +26,8 @@
         </div>
     </div>
     <div class="image">
-        <div class="image__item"><img src="http://via.placeholder.com/450x630"></div>
+        <!-- <div class="image__item"><img src="http://via.placeholder.com/450x630"></div> -->
+        <img class="image__item" [src]="fullImagePath">
     </div>
     <div class="skew">
         <div class="skew__scrolldown">
