--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -14,7 +14,7 @@
     height: calc(100vh - 243px);
 
     .about-me {
-        width: 60%;
+        width: 47%;
         z-index: 20;
         height: 100%;
         padding: 0 50px;
@@ -51,12 +51,14 @@
 
 .image {
     justify-content: flex-end;
-    width: 450px;
+    width: 610px;
     margin: -50px 0 0 0;
     z-index: 0;
 
-    &__item {
-
+    &__item {   
+        position: relative;
+        width: 100%;
+        height: 630px;
     }
 }
 
