--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,20 +6,20 @@
   flex-flow: row;
   height: 100vh;
   width: 100%;
-
-    app-menu {
-      display: flex;
-      width: 75px;
-      height: 100%;
-      text-align: -webkit-center
-    }
-
-    app-sidebar {
-      display: flex;
-      width: 75px;
-      height: 100%;
-      text-align: -webkit-center
-    }
+  
+  app-menu {
+    display: flex;
+    width: 75px;
+    height: 100%;
+    text-align: -webkit-center
+  }
+  
+  app-sidebar {
+    display: flex;
+    width: 75px;
+    height: 100%;
+    text-align: -webkit-center
+  }
 }
 
 .container {
@@ -27,4 +27,87 @@
   width: 100%;
   height: 100%;
   flex-flow: column;
+}
+
+.example-container {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.mat-drawer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+mat-sidenav-container {
+  background-color: $white;
+}
+
+.mat-drawer-container {
+  display: inline;
+}
+
+.mat-sidenav-content {
+  margin: 0;
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  width: 100px;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+
+.btn-item {  
+  text-decoration: none;
+  color: $darkgrey;
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transition: -webkit-transform ease-out 200ms;
+  transition: -webkit-transform ease-out 200ms;
+  transition: transform ease-out 200ms;
+  transition: transform ease-out 200ms, -webkit-transform ease-out 200ms;
+  
+  &:focus {
+    outline: none;
+  }
+  
+  &--orange {
+    height: 38px;
+    width: 200px;
+    left: 30px;
+    
+    &:hover {
+      background-color: $orange;
+    }
+  }
+  
+  &--green {
+    height: 38px;
+    width: 195px;
+    left: 30px;
+    
+    &:hover {
+      background-color: $lightgreen;
+    }
+  }
+  
+  &--purple {
+    height: 38px;
+    width: 134px;
+    left: 30px;
+    
+    &:hover {
+      background-color: $purple;
+    }
+  }
 }
