--- a/src/app/blog-overview/blog/blog.component.html
+++ b/src/app/blog-overview/blog/blog.component.html
@@ -1,18 +1,18 @@
 <div class="blog">
-
+    
     <div class="blog__header">
-
-      <div class="blog__header-container">
-        <div class="blog__header-date">
-          dd / mm / yyyy
+        
+        <div class="blog__header-container">
+            <div class="blog__header-date">
+                dd / mm / yyyy
+            </div>
+            <h1 class="blog__header-title">
+                My first blog
+            </h1>
         </div>
-        <h1 class="blog__header-title">
-          How To Put Movies On Iphone
-        </h1>
-      </div>
-
+        
     </div>
-
+    
     <div class="blog__container">
         <p class="blog__container-paragraph blog__container-paragraph--first">
             Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic
@@ -21,11 +21,11 @@
             How many times have we convinced ourselves that if only we had some more money, life would be so sweet?
             But then, after receiving a substantial raise, we realize that it wasn’t enough and that we need more?
         </p>
-
+        
         <h3 class="blog__container-header">
             “What Should You Do?”
         </h3>
-
+        
         <p class="blog__container-paragraph">
             Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic
             but very impersonal. We make money and then invest our time and effort in making more money.
@@ -33,9 +33,9 @@
             How many times have we convinced ourselves that if only we had some more money, life would be so sweet?
             But then, after receiving a substantial raise, we realize that it wasn’t enough and that we need more?
         </p>
-
+        
         <img class="blog__container-image" src="http://via.placeholder.com/600x300">
-
+        
         <p class="blog__container-paragraph">
             Living in today’s metropolitan world of cellular phones, mobile computers and other high-tech gadgets is not just hectic
             but very impersonal. We make money and then invest our time and effort in making more money.
@@ -43,7 +43,7 @@
             How many times have we convinced ourselves that if only we had some more money, life would be so sweet?
             But then, after receiving a substantial raise, we realize that it wasn’t enough and that we need more?
         </p>
-
+        
     </div>
-
+    
 </div>
