--- a/src/assets/scss/responsive/_desktop-big.scss
+++ b/src/assets/scss/responsive/_desktop-big.scss
@@ -1,7 +1,5 @@
 @media screen and (min-width: 1900px){
-    .welcome {
-        &__skew {
-            margin-top: -90px;
-        }
+    .skew {
+        margin-top: -90px;
     }
 }
